<resources>
    <string name="app_name">Hanu Students</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Đỗ Hải Bình</string>
    <string name="nav_header_subtitle">CNTT-3C-17 1801040022</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_dashboard">Bảng tin</string>
    <string name="menu_timetable">Thời khóa biểu</string>
    <string name="menu_course_reg">Đăng kí môn học</string>
    <string name="menu_marks">Điểm số</string>
    <string name="menu_tuition_fee">Học phí</string>
    <string name="menu_support">Hỗ trợ</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="menu_profile">Thông tin cá nhân</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="title_activity_course_detail">Chi tiết khóa học</string>
    <string name="class_details_tab_1">Chi tiết lớp học</string>
    <string name="class_details_tab_2">Danh sách sinh viên</string>

    <string name="fragment_timetable">Thời khóa biểu</string>
    <string name="label_timetable_unit_list">Danh sách buổi học</string>
    <string name="label_last_update">Cập nhật lần cuối: </string>
    <string name="label_set_alarm">Đặt báo thức</string>
    <string name="label_course_code">Mã lớp học: </string>

    <string name="sl_heading_id">STT</string>
    <string name="sl_heading_sid">Mã SV</string>
    <string name="sl_heading_sname">Họ và tên</string>
    <string name="sl_heading_class">Lớp HC</string>
    <string name="sl_heading_sfaculty">Khoa</string>

    <string name="gs_heading_id">STT</string>
    <string name="gs_heading_course_code">Mã môn học</string>
    <string name="gs_heading_course_name">Tên môn học</string>
    <string name="gs_heading_credits">STC</string>
    <string name="gs_heading_mark_att">C.cần</string>
    <string name="gs_heading_mark_mt">Giữa kì</string>
    <string name="gs_heading_mark_ex">Thi</string>
    <string name="gs_heading_mark_fn">TBM</string>

    <string name="label_tuition_summary">Học phí trong kì:</string>
    <string name="tuition_tab_1">Học phí trong kì</string>
    <string name="tuition_tab_2">Lịch sử học phí</string>
    <string name="label_btn_pay_tuition">Đóng học phí</string>
    <string name="label_no_more_fee">Bạn đã hoàn thành học phí kì này!</string>
    <string name="label_logging_out">Đang đăng xuất...</string>

    <string name="channel_name">Noti_Channel</string>
    <string name="channel_description">Noti_Channel</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="label_activity_login">Đăng nhập để sử dụng ứng dụng</string>
    <string name="prompt_sid">Mã SV</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Đăng nhập thất bại!"</string>

    <string name="label_choose">Chọn</string>

    <string name="pref_auth_token">auth_token</string>
</resources>
