<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_timetable"
            android:title="@string/menu_timetable" />
        <item
            android:id="@+id/nav_course_reg"
            android:title="@string/menu_course_reg" />
        <item
                android:id="@+id/nav_marks"
                android:title="@string/menu_marks" />
        <item
            android:id="@+id/nav_tuition_fee"
            android:title="@string/menu_tuition_fee" />
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:title="@string/menu_settings" />-->
        <item
            android:id="@+id/nav_support"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
