<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/studentlist_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="3">

    <TableRow
            android:id="@+id/studentlist_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/sl_heading_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:background="@drawable/border"
                android:padding="4dp"
                android:text="@string/sl_heading_id"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/sl_heading_sid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:background="@drawable/border"
                android:padding="4dp"
                android:text="@string/sl_heading_sid"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/sl_heading_sname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:background="@drawable/border"
                android:padding="4dp"
                android:text="@string/sl_heading_sname"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/sl_heading_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:background="@drawable/border"
                android:padding="4dp"
                android:text="@string/sl_heading_class"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/sl_heading_sfaculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:background="@drawable/border"
                android:padding="4dp"
                android:text="@string/sl_heading_sfaculty"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

    </TableRow>

</TableLayout>